# rusty-dropbox-api

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustc-ice-2024-07-19T23_48_59-61855.txt  rustc-ice-2024-07-19T23_48_59-61856.txt  todo.txt
.github/workflows/: ci.yml
api/: Cargo.toml
api/api_derive/: Cargo.toml
api/api_derive/src/: lib.rs
api/src/: consts.rs  lib.rs
examples/: chunked_upload.rs  download_stream.rs  oauth_refresh.rs  quickstart.rs  typed_errors.rs
models/: Cargo.toml
models/src/: add_folder_member.rs  app.rs  delete_manual_contacts.rs  delete_manual_contacts_batch.rs  lib.rs  properties_add.rs  properties_overwrite.rs  properties_remove.rs  properties_search.rs  properties_search_continue.rs  properties_update.rs  set_profile_photo.rs  templates_add_for_user.rs  templates_get_for_user.rs  templates_list_for_user.rs  templates_remove_for_user.rs  templates_update_for_user.rs  token_revoke.rs  user.rs
models/src/account/: mod.rs  set_profile_photo.rs
models/src/auth/: mod.rs  token_revoke.rs
models/src/check/: app.rs  mod.rs  user.rs
models/src/contacts/: delete_manual_contacts.rs  delete_manual_contacts_batch.rs  mod.rs
models/src/file_properties/: mod.rs  properties_add.rs  properties_overwrite.rs  properties_remove.rs  properties_search.rs  properties_search_continue.rs  properties_update.rs  templates_add_for_user.rs  templates_get_for_user.rs  templates_list_for_user.rs  templates_remove_for_user.rs  templates_update_for_user.rs
models/src/file_requests/: count.rs  create.rs  delete.rs  delete_all_closed.rs  get.rs  list.rs  list_continue.rs  mod.rs
models/src/files/: copy.rs  copy_batch.rs  copy_batch_check.rs  copy_reference_get.rs  copy_reference_save.rs  create_folder.rs  create_folder_batch.rs  create_folder_batch_check.rs  delete.rs  delete_batch.rs  delete_batch_check.rs  download_zip.rs  mod.rs
models/src/sharing/: mod.rs
src/: client.rs  lib.rs
src/api/: mod.rs
src/auth/: mod.rs
src/endpoints/: headers.rs  mod.rs
src/errors/: mod.rs
src/helpers/: chunked_upload.rs  download_stream.rs  mod.rs  upload_stream.rs
src/macros/: mod.rs  service.rs  service_tests.rs  tests.rs  utils.rs
src/models/: mod.rs
src/models/account/: mod.rs  set_profile_photo.rs
src/models/auth/: mod.rs  token_revoke.rs
src/models/check/: app.rs  mod.rs  user.rs
src/models/contacts/: delete_manual_contacts.rs  delete_manual_contacts_batch.rs  mod.rs
src/models/file_properties/: mod.rs  properties_add.rs  properties_overwrite.rs  properties_remove.rs  properties_search.rs  properties_search_continue.rs  properties_update.rs  templates_add_for_user.rs  templates_get_for_user.rs  templates_list_for_user.rs  templates_remove_for_user.rs  templates_update_for_user.rs
src/models/file_requests/: count.rs  create.rs  delete.rs  delete_all_closed.rs  get.rs  list.rs  list_continue.rs  mod.rs
src/models/files/: copy.rs  copy_batch.rs  copy_batch_check.rs  copy_reference_get.rs  copy_reference_save.rs  create_folder.rs  create_folder_batch.rs  create_folder_batch_check.rs  delete.rs  delete_batch.rs  download.rs  download_zip.rs  export.rs  get_file_lock_batch.rs  get_metadata.rs  get_preview.rs  get_temporary_link.rs  get_temporary_upload_link.rs  get_thumbnail.rs  get_thumbnail_batch.rs  list_folder.rs  list_folder_get_latest_cursor.rs  list_folder_longpoll.rs  list_folders_continue.rs  list_revisions.rs  lock_file_batch.rs  mod.rs  move.rs  move_batch.rs  move_batch_check.rs  paper_create.rs  paper_update.rs  permanently_delete.rs  restore.rs  save_url.rs  save_url_check_job_status.rs  search.rs  search_continue.rs  tags_add.rs  tags_get.rs  (+9 more)
src/models/openid/: mod.rs  userinfo.rs
src/models/secondary_emails/: add.rs  delete.rs  mod.rs  resend_verification_emails.rs
src/models/seen_state/: mark_seen.rs  mod.rs
src/models/sharing/: add_file_member.rs  add_folder_member.rs  check_job_status.rs  check_remove_member_job_status.rs  check_share_job_status.rs  create_shared_link_with_settings.rs  get_file_metadata.rs  get_file_metadata_batch.rs  get_folder_metadata.rs  get_shared_link_file.rs  get_shared_link_metadata.rs  list_file_members.rs  list_file_members_batch.rs  list_file_members_continue.rs  list_folder_members.rs  list_folder_members_continue.rs  list_folders.rs  list_folders_continue.rs  list_mountable_folders.rs  list_mountable_folders_continue.rs  list_received_files.rs  list_received_files_continue.rs  list_shared_links.rs  mod.rs  modify_shared_link_settings.rs  mount_folder.rs  share_folder.rs  (+13 more)
src/tests_utils/: mod.rs
src/traits/: mod.rs
tests/: integration_tests.rs  live_dropbox.rs
(+6 files in other folders)
