[package]
name = "dropbox_api"
version = "0.1.0"
edition = "2021"

[dependencies]
# api = { path = "../api", version = "0.1.1", features = ["test-utils"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
enum-variants-strings = "0.3.0"
strum = "0.26"
strum_macros = "0.26"
chrono = { version = "0.4.38", features = ["serde"] }
async-trait = "0.1.81"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
anyhow = "1.0.86"
thiserror = "1.0.61"
lazy_static = "1.5.0"
futures = "0.3.30"
tokio = "1.38.0"
mockito = "1.4.0"


[dev-dependencies]
# api = { path = "../api", version = "0.1.1", features = ["test-utils"] }
tokio = { version = "1.38.0", features = ["full"] }
anyhow = "1.0.86"

[features]
test-utils = []
