[package]
name = "rusty_dropbox_sdk"
description = "Unofficial SDK for dropbox in Rust"
repository = "https://github.com/leichak/rusty-dropbox-api"
readme = "README.md"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-only"
keywords = ["sdk", "dropbox"]
authors = ["Dan Kac <dankaccoder@icloud.com>"]

[dependencies]
# Serde for serialization and deserialization
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

# Enum and string manipulation utilities
enum-variants-strings = "0.3.0"
strum = "0.26"
strum_macros = "0.26"

# Date and time handling
chrono = { version = "0.4.38", features = ["serde"] }

# Async utilities and traits
async-trait = "0.1.81"
futures = "0.3.30"
tokio = "1.38.0"

# HTTP client and request handling
reqwest = { version = "0.12.5", features = ["blocking", "json"] }

# Error handling
anyhow = "1.0.86"
thiserror = "1.0.61"

# Miscellaneous utilities
lazy_static = "1.5.0"

# Testing utilities
mockito = "1.4.0"

[dev-dependencies]
# Tokio with full feature set for tests
tokio = { version = "1.38.0", features = ["full"] }

# Anyhow for error handling in tests
anyhow = "1.0.86"

[features]
# Feature flag for test utilities
test-utils = []
