[package]
name = "rusty_dropbox_sdk"
description = "Unofficial SDK for dropbox in Rust"
repository = "https://github.com/leichak/rusty-dropbox-api"
documentation = "https://docs.rs/rusty_dropbox_sdk"
readme = "README.md"
version = "0.8.2"
edition = "2021"
rust-version = "1.75"
license = "GPL-3.0-only"
keywords = ["sdk", "dropbox", "api", "client", "async"]
categories = ["api-bindings", "web-programming::http-client"]
authors = ["Dan Kac <dankaccoder@icloud.com>"]

[dependencies]
# Serde for serialization and deserialization
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

# Enum and string manipulation utilities
enum-variants-strings = "0.3.0"
strum = "0.26"
strum_macros = "0.26"

# Date and time handling
chrono = { version = "0.4.38", features = ["serde"] }

# Async utilities and traits
async-trait = "0.1.81"
futures = "0.3.30"
tokio = "1.38.0"

# HTTP client and request handling
reqwest = { version = "0.12.5", features = ["blocking", "json", "stream"] }
bytes = "1"

# Error handling
anyhow = "1.0.86"
thiserror = "1.0.61"

# Miscellaneous utilities
lazy_static = "1.5.0"

# HTTP mocking — optional, only pulled in when the `test-utils` feature is on.
mockito = { version = "1.4.0", optional = true }

[dev-dependencies]
# Tokio with full feature set for tests
tokio = { version = "1.38.0", features = ["full"] }

# Anyhow for error handling in tests
anyhow = "1.0.86"

[features]
# Feature flag for test utilities. Pulls in `mockito` for HTTP mocking.
# Intended for contributors and downstream tests; default builds skip it.
test-utils = ["dep:mockito"]
