[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { path = "../api", version = "0.1.1", features = ["test-utils"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
enum-variants-strings = "0.3.0"
strum = "0.26"
strum_macros = "0.26"
chrono = { version = "0.4.38", features = ["serde"] }

[dev-dependencies]
api = { path = "../api", version = "0.1.1", features = ["test-utils"] }
tokio = { version = "1.38.0", features = ["full"] }
anyhow = "1.0.86"
